--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 DB_PORT=5432
-DB_HOST=dpg-clm78tkjtl8s73ah4pig-a
-DB_USER=dbname_n7mw_user
-DB_PASSWORD=S3lzFxi0vadceJVkaMY1SgRwopGsX4Gg
-DB_NAME=dbname_n7mw
+DB_HOST=dpg-cop4don79t8c7381l1ig-a
+DB_USER=database_js0r_user
+DB_PASSWORD=m6D3rzzRteLb5jSwUxrGy24n2AJrEnER
+DB_NAME=database_js0r
